fix bug of departure time not showing in home view

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -56,7 +56,7 @@ h1 {font-size: $h1}
 
 // PAGE CONTENT ANIMATION
 .page-content {
-  background: linear-gradient(to bottom, $sunny-color-gradient,black 50%);
+  background: linear-gradient(to bottom, $sunny-color-gradient,black 50vh);
   position: relative;
   -webkit-animation-name: animatebottom;
   -webkit-animation-duration: 1s;
