--- a/client/src/components/Home/styles.scss
+++ b/client/src/components/Home/styles.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0 0 1rem $sunny-color;
+  box-shadow: 0 0 1rem $sunny-color, inset 0 0 1rem $sunny-color;
 
 }
 
@@ -26,4 +26,16 @@
   flex-direction: row;
   justify-content: space-between;
   // width: 75%;
+}
+
+.recommendation-list-item {
+  list-style-type: none;
+  background-color: rgb(73,72,72);
+  border: red solid thin;
+
+  &__main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
